Added aspect extraction, changed tuple architecture, Added support for multiple tag clouds based on sentiment analysis, Added support for multiple Persistence Services to write tag cloud data